Update feature event